--- a/pwiz_tools/Skyline/EditUI/ReintegrateDlg.resx
+++ b/pwiz_tools/Skyline/EditUI/ReintegrateDlg.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="modeUIHandler.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnCancel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -148,7 +151,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="btnOk.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -178,7 +181,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnOk.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="textBoxCutoff.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -202,7 +205,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textBoxCutoff.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -229,7 +232,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="reintegrateAllPeaks.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -256,7 +259,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;reintegrateAllPeaks.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="reintegrateQCutoff.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -283,7 +286,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;reintegrateQCutoff.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="checkBoxOverwrite.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -310,7 +313,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;checkBoxOverwrite.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="label36.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -340,7 +343,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label36.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="comboBoxScoringModel.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 33</value>
@@ -361,33 +364,54 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;comboBoxScoringModel.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
-  <data name="checkBoxUseAlignment.AutoSize" type="System.Boolean, mscorlib">
+  <data name="lblRunToRunAlignment.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="checkBoxUseAlignment.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 181</value>
+  <data name="lblRunToRunAlignment.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 161</value>
   </data>
-  <data name="checkBoxUseAlignment.Size" type="System.Drawing.Size, System.Drawing">
-    <value>141, 17</value>
+  <data name="lblRunToRunAlignment.Size" type="System.Drawing.Size, System.Drawing">
+    <value>108, 13</value>
   </data>
-  <data name="checkBoxUseAlignment.TabIndex" type="System.Int32, mscorlib">
+  <data name="lblRunToRunAlignment.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
   </data>
-  <data name="checkBoxUseAlignment.Text" xml:space="preserve">
-    <value>Use run to run alignment</value>
+  <data name="lblRunToRunAlignment.Text" xml:space="preserve">
+    <value>Run to run alignment:</value>
   </data>
-  <data name="&gt;&gt;checkBoxUseAlignment.Name" xml:space="preserve">
-    <value>checkBoxUseAlignment</value>
+  <data name="&gt;&gt;lblRunToRunAlignment.Name" xml:space="preserve">
+    <value>lblRunToRunAlignment</value>
   </data>
-  <data name="&gt;&gt;checkBoxUseAlignment.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;lblRunToRunAlignment.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;checkBoxUseAlignment.Parent" xml:space="preserve">
+  <data name="&gt;&gt;lblRunToRunAlignment.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;checkBoxUseAlignment.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;lblRunToRunAlignment.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="comboRunToRunAlignment.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 177</value>
+  </data>
+  <data name="comboRunToRunAlignment.Size" type="System.Drawing.Size, System.Drawing">
+    <value>168, 21</value>
+  </data>
+  <data name="comboRunToRunAlignment.TabIndex" type="System.Int32, mscorlib">
+    <value>11</value>
+  </data>
+  <data name="&gt;&gt;comboRunToRunAlignment.Name" xml:space="preserve">
+    <value>comboRunToRunAlignment</value>
+  </data>
+  <data name="&gt;&gt;comboRunToRunAlignment.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;comboRunToRunAlignment.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;comboRunToRunAlignment.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -405,10 +429,16 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Reintegrate</value>
   </data>
+  <data name="&gt;&gt;modeUIHandler.Name" xml:space="preserve">
+    <value>modeUIHandler</value>
+  </data>
+  <data name="&gt;&gt;modeUIHandler.Type" xml:space="preserve">
+    <value>pwiz.Skyline.Util.Helpers+ModeUIExtender, Skyline-daily, Version=23.0.9.262, Culture=neutral, PublicKeyToken=null</value>
+  </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ReintegrateDlg</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>pwiz.Skyline.Util.FormEx, Skyline, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>pwiz.Skyline.Util.FormEx, Skyline-daily, Version=23.0.9.262, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
