--- a/pwiz_tools/Skyline/EditUI/PeakImputation/PeakImputationForm.resx
+++ b/pwiz_tools/Skyline/EditUI/PeakImputation/PeakImputationForm.resx
@@ -120,4 +120,19 @@
   <metadata name="ModeUIExtender.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>160, 17</value>
+  </metadata>
+  <data name="comboManualPeaks.ToolTip" xml:space="preserve">
+    <value>Skip: Replicates with manually integrated peaks are skipped
+Accept: Manually integrated peaks are assumed to be correct and are used to impute other peaks
+Overwrite: (not yet implemented) Manually integrated peaks will be rechosen by the scoring model and then either accepted or imputed </value>
+  </data>
+  <data name="comboScoringModel.ToolTip" xml:space="preserve">
+    <value>Scoring model to decide which peaks should be accepted and which peaks should be imputed from the accepted peaks.
+If no scoring model is selected, then all chosen peaks will be accepted and all missing peaks will be imputed.</value>
+  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>160, 17</value>
+  </metadata>
 </root>
