--- a/pwiz_tools/Skyline/Model/Databinding/Entities/ColumnCaptions.resx
+++ b/pwiz_tools/Skyline/Model/Databinding/Entities/ColumnCaptions.resx
@@ -126,8 +126,17 @@
   <data name="Abundance">
     <value>Abundance</value>
   </data>
+  <data name="AccuractStrict">
+    <value>Accuracy Strict</value>
+  </data>
   <data name="Accuracy">
     <value>Accuracy</value>
+  </data>
+  <data name="AccuracyMessage">
+    <value>Accuracy Message</value>
+  </data>
+  <data name="AccuracyRaw">
+    <value>Accuracy Raw</value>
   </data>
   <data name="AcquiredTime">
     <value>Acquired Time</value>
@@ -218,6 +227,15 @@
   </data>
   <data name="CalculatedConcentration">
     <value>Calculated Concentration</value>
+  </data>
+  <data name="CalculatedConcentrationMessage">
+    <value>Calculated Concentration Message</value>
+  </data>
+  <data name="CalculatedConcentrationRaw">
+    <value>Calculated Concentration Raw</value>
+  </data>
+  <data name="CalculatedConcentrationStrict">
+    <value>Calculated Concentration Strict</value>
   </data>
   <data name="CalibrationCurve">
     <value>Calibration Curve</value>
@@ -768,6 +786,18 @@
   <data name="MoleculeListAbundance">
     <value>Molecule List Abundance</value>
   </data>
+  <data name="MoleculeListAbundanceMessage">
+    <value>Molecule List Abundance Message</value>
+  </data>
+  <data name="MoleculeListAbundanceRaw">
+    <value>Molecule List Abundance Raw</value>
+  </data>
+  <data name="MoleculeListAbundanceStrict">
+    <value>Molecule List Abundance Strict</value>
+  </data>
+  <data name="MoleculeListAbundanceTransitionWeighted">
+    <value>Molecule List Abundance Transition Weighted</value>
+  </data>
   <data name="MoleculeListLocator">
     <value>Molecule List Locator</value>
   </data>
@@ -957,6 +987,15 @@
   <data name="PrecursorAccuracy">
     <value>Precursor Accuracy</value>
   </data>
+  <data name="PrecursorAccuracyMessage">
+    <value>Precursor Accuracy Message</value>
+  </data>
+  <data name="PrecursorAccuracyRaw">
+    <value>Precursor Accuracy Raw</value>
+  </data>
+  <data name="PrecursorAccuracyStrict">
+    <value>Precursor Accuracy Strict</value>
+  </data>
   <data name="PrecursorAdduct">
     <value>Precursor Adduct</value>
   </data>
@@ -1058,6 +1097,18 @@
   </data>
   <data name="ProteinAbundance">
     <value>Protein Abundance</value>
+  </data>
+  <data name="ProteinAbundanceMessage">
+    <value>Protein Abundance Message</value>
+  </data>
+  <data name="ProteinAbundanceRaw">
+    <value>Protein Abundance Raw</value>
+  </data>
+  <data name="ProteinAbundanceStrict">
+    <value>Protein Abundance Strict</value>
+  </data>
+  <data name="ProteinAbundanceTransitionWeighted">
+    <value>Protein Abundance Transition Weighted</value>
   </data>
   <data name="ProteinAccession">
     <value>Protein Accession</value>
